# Bluetooth-Chat-App

./: .env  .gitignore  README.md  b2.data  build.sh  buildozer.spec  config.py  deploy.sh  main.py  push.sh  pyproject.toml  restart.sh  update.sh
db/: engine.py
db/manager/: chats.py  contacts.py  devices.py  members.py  messages.py  settings.py
messenger/: init.py  pages.py  utils.py  widgets.py
messenger/ui/: button_link.kv  home.kv  loader.py  root.kv
messenger/widgets/: __init__.py  app_screen.py  root.kv  root_widget.py  utils.py
messenger/widgets/debug/: advertise.py  bluetooth.py  chat.py  chats.py  contacts.py  devices.py  messages.py  navigation.py  scan_devices.py  scanner.py  settings.py  transport.py
messenger/widgets/debug/components/: cell.py  debug_layout.py  form_field_row.py
messenger/widgets/frontend/: bluetooth_manager_view.kv  bluetooth_manager_view.py  button_link.py  chat_view.py  chats_view.py  home.py  home_view.kv  home_view.py
messenger/widgets/frontend/components/: back_link.py  button_link.py  chat_card.py  connection_status_card.py  device_card.py  message_card.py  screen_container.py  (+1 more)
models/: __init__.py  models.py
services/: android.py  bluetooth.py  bluetooth_android.py  bluetooth_desktop.py  bluetooth_discovery.py  bluetooth_fake.py  connection.py  fake_bluetooth.py  fake_bluetooth_discovery.py  fake_message.py  find_number.py  message.py  platform.py  service.py  suggestions  tests.py  tests_android.py  tests_desktop.py  transport.py
services/bluetooth_tutorial/: client.py  server.py
utils/: __init__.py  utils.py
