[project]
name = "Blu2"
version = "0.2.0"
description = "Communicate with Android devices over a Bluetooth connection."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "buildozer>=1.6.0",
    "kivy>=2.3.1",
    "kivymd",
    "pip>=26.1.2",
    "sqlalchemy==1.4.49",
]

[tool.uv.sources]
kivymd = {
    git = "https://github.com/kivymd/KivyMD.git",
    rev = "365aa9b96eee63e0e29c04de297dd222f478fce5",
}